[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,27 @@
 <html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>article one</title>
+    <style>
+        .container{
+            padding-top: 20px;
+            font-family: sans-seriff;
+            color: grey;
+        }
+    </style>
+</head>
+<body>
+ <div class="container">
+    <div>
+        <a href="/"><h3>Home</h3></a>
+    </div>        
+    <hr>
+    <h2>Article one</h2>
+    <p>
+        this is article one.this is article one.this is article one.this is article one.this is article one.
+        this is article one.this is article one.this is article one.this is article one.this is article one.
+    </p>
+ </div>
+    
+</body>
 </html>
