[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,13 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>article one</title>
-    <style>
-        .container{
-            padding-top: 20px;
-            font-family: sans-seriff;
-            color: grey;
-        }
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
  <div class="container">
