[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
         <script>
             alert('hi,i am javascript!');
         </script>
-       <script src="/main.js"></script>
+       <script src="/ui/main.js"></script>
     </head>
     <body>
         <div class="center">
