--- a/ui/index.html
+++ b/ui/index.html
@@ -9,11 +9,20 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://lh3.googleusercontent.com/XVTK_K5tV9x-eNWf8CkVJvQHVdM8cNvIoOvlH5lOaA80hBQmVNsvj7FN1fhivBg09anWy5ufgUS21qQ=w1360-h662-rw" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
-            Hi binil ! I am your webapp.Good luck..
+        <hr/>
+        <div class="container">
+            <div>
+                <h3>Personnel info.</h3>
+                <p>Hi i am Binil Biju...</p>
+            </div>
+            <hr/>
+            <div>
+                <h3>Professional</h3>
+                <p>Hi i am Btech student at MACE</p>
+            </div>
         </div>
         <script src="/ui/main.js"></script>
     </body>
