[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,13 @@
     
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="https://lh3.googleusercontent.com/XVTK_K5tV9x-eNWf8CkVJvQHVdM8cNvIoOvlH5lOaA80hBQmVNsvj7FN1fhivBg09anWy5ufgUS21qQ=w1360-h662-rw" class="img-medium"/>
-        </div>
-        <br>
-        <hr/>
         <div class="container">
+            <div class="center">
+                <img id="madi" src="https://lh3.googleusercontent.com/XVTK_K5tV9x-eNWf8CkVJvQHVdM8cNvIoOvlH5lOaA80hBQmVNsvj7FN1fhivBg09anWy5ufgUS21qQ=w1360-h662-rw" class="img-medium"/>
+            </div>
+            <br>
+            <hr/>
+            
             <div>
                 <h3>Personnel info.</h3>
                 <p>Hi i am Binil Biju...</p>
@@ -19,6 +20,9 @@
             <div>
                 <h3>Professional</h3>
                 <p>Hi i am Btech student at MACE</p>
+            </div>
+            <div class="footer">
+                This button<button id="fbut">click me!</button>was clicked<span id="noc">0</span>times
             </div>
         </div>
         <script src="/ui/main.js"></script>
