[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id="madi" src="https://lh3.googleusercontent.com/XVTK_K5tV9x-eNWf8CkVJvQHVdM8cNvIoOvlH5lOaA80hBQmVNsvj7FN1fhivBg09anWy5ufgUS21qQ=w1360-h662-rw" class="img-medium"/>
+                <img id="madi" src="https://drive.google.com/drive/u/1/folders/0B0O4XFUvgyopU19TWWU0Q2xXeVU" class="img-medium"/>
             </div>
             <br>
             <hr/>
