--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id="madi" src="https://drive.google.com/drive/u/1/folders/0B0O4XFUvgyopU19TWWU0Q2xXeVU" class="img-medium"/>
+                <img id="madi" src="https://drive.google.com/file/d/0B0O4XFUvgyopVC1WSklDQm8xeGc/view?usp=sharing" class="img-medium"/>
             </div>
             <br>
             <hr/>
