[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id="madi" src="https://lh3.googleusercontent.com/uCJBxCJUBp-BEk9JiUCs12_FGAXjqVh_lMHcptQOMHuUz4uXHwOsw9I4uw8QDsnl-WLRZZ4vbIbz8Kw=w1360-h662-rw" class="img-medium"/>
+                <img style="width:200px" id="madi" src="https://lh3.googleusercontent.com/uCJBxCJUBp-BEk9JiUCs12_FGAXjqVh_lMHcptQOMHuUz4uXHwOsw9I4uw8QDsnl-WLRZZ4vbIbz8Kw=w1360-h662-rw" class="img-medium"/>
             </div>
             <br>
             <hr/>
