[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img style="width:200px ,height:200px" id="madi" src="https://lh3.googleusercontent.com/uCJBxCJUBp-BEk9JiUCs12_FGAXjqVh_lMHcptQOMHuUz4uXHwOsw9I4uw8QDsnl-WLRZZ4vbIbz8Kw=w1360-h662-rw" class="img-medium"/>
+                <img style="width:200px ,height:200px" id="madi" src="https://lh3.googleusercontent.com/uCJBxCJUBp-BEk9JiUCs12_FGAXjqVh_lMHcptQOMHuUz4uXHwOsw9I4uw8QDsnl-WLRZZ4vbIbz8Kw=w1360-h662-rw" />
             </div>
             <br>
             <hr/>
@@ -21,9 +21,18 @@
                 <h3>Professional</h3>
                 <p>Hi i am Btech student at MACE</p>
             </div>
+            <hr/>
             <div class="footer">
                 This button <button id="fbut">click me!</button> was clicked <span id="noc">0</span> times
             </div>
+            <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit"></input>
+            <ul>
+                <li>name1</li>
+                <li>name2</li>
+                <li>name3</li>
+            </ul>
         </div>
         <script src="/ui/main.js"></script>
     </body>
