--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
             <hr/>
             <input type="text" id="name" placeholder="name"></input>
             <input type="submit" id="submitbutton"></input>
-            <ul id="nameluist">
+            <ul id="list">
 
             </ul>
         </div>
