--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img style="width:100px ,height:100px" id="madi" src="https://lh3.googleusercontent.com/uCJBxCJUBp-BEk9JiUCs12_FGAXjqVh_lMHcptQOMHuUz4uXHwOsw9I4uw8QDsnl-WLRZZ4vbIbz8Kw=w1360-h662-rw" />
+                <img class="img-medium" id="madi" src="https://lh3.googleusercontent.com/uCJBxCJUBp-BEk9JiUCs12_FGAXjqVh_lMHcptQOMHuUz4uXHwOsw9I4uw8QDsnl-WLRZZ4vbIbz8Kw=w1360-h662-rw" />
             </div>
             <div>
                 <h3>Personnel info.</h3>
