[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img class="img-medium" id="madi" alt="image" src="https://drive.google.com/open?id=1PJ3RzqYFamCoKe0j_GlQo3oJceRNG8Mj" />
+                <img class="img-medium" id="madi" alt="image" src="http://commonpence.co/flower-photo/" />
             </div>
             <div>
                 <h3>Personnel info.</h3>
