[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             <hr/>
             <div>
                 <h3>Professional</h3>
-                <p>Hi i am Btech student at MACE</p>
+                <p>Hi i am a Btech student at MACE</p>
             </div>
             <hr/>
             <div class="footer">
